# graph-algorithms

./: CMakeLists.txt  README.md  random_graph_generator.py
src/: CMakeLists.txt
src/bipartite_core/: CMakeLists.txt
src/bipartite_core/src/: basic_bipartite_core_decomposition.cpp  bipartite_core.cpp  bipartite_core_compare.cpp  bipartite_core_degree_index.cpp  bipartite_core_order.cpp  bipartite_core_rem_degree_index.cpp  bipartite_vertex_index.cpp  branch_bipartite_core_decomposition.cpp  branch_bipartite_core_maintenance.cpp  edge_bipartite_core_maintenance.cpp  left_vertex_index.cpp  quasi_bipartite_core_maintenance.cpp  right_vertex_index.cpp  share_bipartite_core_decomposition.cpp
src/core/: CMakeLists.txt
src/core/src/: basic_core_decomposition.cpp  bin_sort_core_decomposition.cpp  core_compare.cpp  jes_core_maintenance.cpp  order_core_maintenance.cpp  order_maintenance.cpp  quasi_core_maintenance.cpp  traversal_core_maintenance.cpp
src/gadget/: CMakeLists.txt
src/gadget/src/: disjoint.cpp  gadget.cpp  heap.cpp  sb_tree.cpp  treap.cpp
src/graph/: CMakeLists.txt
src/graph/src/: abstract_bipartite_edge.cpp  abstract_bipartite_graph.cpp  abstract_edge.cpp  abstract_graph.cpp  abstract_left_vertex.cpp  abstract_right_vertex.cpp  abstract_vertex.cpp  temporal_bipartite_edge.cpp  temporal_bipartite_graph.cpp  temporal_edge.cpp  temporal_graph.cpp  temporal_left_vertex.cpp  temporal_right_vertex.cpp  temporal_vertex.cpp  weighted_bipartite_edge.cpp  weighted_bipartite_graph.cpp  weighted_edge.cpp  weighted_graph.cpp  weighted_left_vertex.cpp  weighted_right_vertex.cpp  weighted_vertex.cpp
src/io/: CMakeLists.txt
src/io/src/: abstract_bipartite_graph_io.cpp  abstract_graph_io.cpp  temporal_bipartite_graph_io.cpp  temporal_graph_io.cpp  weighted_bipartite_graph_io.cpp  weighted_graph_io.cpp
src/logger/: CMakeLists.txt
src/logger/src/: simple_logger.cpp
src/multiple_core/: CMakeLists.txt
src/multiple_core/src/: basic_multiple_core_decomposition.cpp  branch_multiple_core_decomposition.cpp  branch_multiple_core_maintenance.cpp  hierarchy_multiple_core_decomposition.cpp  hierarchy_multiple_core_maintenance.cpp  multiple_core.cpp  multiple_core_compare.cpp  multiple_core_number_set_index.cpp  multiple_core_pair_map_index.cpp  multiple_core_pair_set_index.cpp
src/random/: CMakeLists.txt
src/random/src/: random_generator.cpp
src/string/: CMakeLists.txt
src/string/src/: extend_string.cpp  string_algorithm.cpp
src/system/: CMakeLists.txt
src/system/src/: process_information.cpp
src/thread/: CMakeLists.txt
src/thread/src/: complicated_thread_pool.cpp  join_thread.cpp  simple_thread_pool.cpp  thread_guard.cpp  thread_pool.cpp  work_stealing_queue.cpp
src/time/: CMakeLists.txt
src/time/src/: simple_timer.cpp
src/truss/: CMakeLists.txt
src/truss/src/: basic_truss_decomposition.cpp  bin_sort_truss_decomposition.cpp  edge_truss_maintenance.cpp  jes_order_truss_maintenance.cpp  jes_truss_maintenance.cpp  mixed_structure_truss_maintenance.cpp  order_truss_maintenance.cpp  quasi_truss_maintenance.cpp  truss_compare.cpp
src/wing/: CMakeLists.txt
src/wing/src/: BE_index.cpp  basic_wing_decomposition.cpp  bipartite_edge_index.cpp  index_wing_decomposition.cpp  order_wing_maintenance.cpp  peel_wing_decomposition.cpp  priority_obeyed_bloom.cpp  quasi_order_wing_maintenance.cpp  quasi_wing_maintenance.cpp  wing_compare.cpp
test/: CMakeLists.txt
test/include/bipartite_core_test/: bipartite_core_test.h
test/include/bipartite_graph_process_test/: bipartite_graph_process_test.h
test/include/container_test/: container_test.h
test/include/core_test/: core_test.h
test/include/graph_process_test/: graph_process_test.h
test/include/multiple_core_test/: multiple_core_test.h
test/include/system_test/: system_test.h
test/include/temporal_bipartite_graph_process_test/: temporal_bipartite_graph_process_test.h
test/include/temporal_graph_process_test/: temporal_graph_process_test.h
test/include/thread_test/: thread_test.h
test/include/truss_test/: truss_test.h
test/include/unique_temporal_graph_process_test/: unique_temporal_graph_process_test.h
test/include/wing_test/: wing_test.h
test/src/bipartite_core_test/: CMakeLists.txt  bipartite_core_test.sh
test/src/bipartite_core_test/src/: bipartite_core_decomposition_test.cpp  bipartite_core_insertion_compare_test.cpp  bipartite_core_insertion_removal_compare_test.cpp  bipartite_core_insertion_removal_size_test.cpp  bipartite_core_insertion_removal_test.cpp  bipartite_core_insertion_removal_thread_test.cpp  bipartite_core_insertion_size_test.cpp  bipartite_core_insertion_test.cpp  bipartite_core_insertion_thread_test.cpp  bipartite_core_removal_compare_test.cpp  bipartite_core_removal_size_test.cpp  bipartite_core_removal_test.cpp  bipartite_core_removal_thread_test.cpp  bipartite_core_split_temporal_bipartite_edges.cpp  split_temporal_bipartite_edges.cpp
test/src/bipartite_graph_process_test/: CMakeLists.txt  bipartite_graph_process.sh
test/src/bipartite_graph_process_test/src/: bipartite_graph_process.cpp
test/src/container_test/: CMakeLists.txt
test/src/container_test/src/: container_test.cpp
test/src/core_test/: CMakeLists.txt  core_test.sh
test/src/core_test/src/: core_decomposition_count_test.cpp  core_decomposition_test.cpp  core_insertion_compare_test.cpp  core_insertion_performance_test.cpp  (+31 more)
test/src/graph_process_test/: CMakeLists.txt  graph_process.sh
test/src/logger_test/: CMakeLists.txt
test/src/multiple_core_test/: CMakeLists.txt  multiple_core_test.sh
test/src/system_test/: CMakeLists.txt
test/src/temporal_bipartite_graph_process_test/: CMakeLists.txt  temporal_bipartite_graph_process.sh  unique_temporal_bipartite_graph_process.sh
test/src/temporal_graph_process_test/: CMakeLists.txt  temporal_graph_process.sh
test/src/thread_test/: CMakeLists.txt
test/src/truss_test/: CMakeLists.txt  truss_test.sh
test/src/unique_temporal_graph_process_test/: CMakeLists.txt  unique_temporal_graph_process.sh
test/src/wing_test/: CMakeLists.txt  wing_test.sh
(+178 files in other folders)
