project(src)

add_subdirectory(gadget)
add_subdirectory(bipartite_core)
add_subdirectory(graph)
add_subdirectory(logger)
add_subdirectory(io)
add_subdirectory(random)
add_subdirectory(string)
add_subdirectory(multiple_core)
add_subdirectory(time)
add_subdirectory(system)
add_subdirectory(thread)
add_subdirectory(truss)
add_subdirectory(wing)



