project(test)

add_subdirectory(src/bipartite_graph_process_test)
add_subdirectory(src/graph_process_test)
add_subdirectory(src/container_test)
add_subdirectory(src/logger_test)
add_subdirectory(src/multiple_core_test)
add_subdirectory(src/system_test)
add_subdirectory(src/temporal_bipartite_graph_process_test)
add_subdirectory(src/temporal_graph_process_test)
add_subdirectory(src/thread_test)
add_subdirectory(src/truss_test)
