project(scnu_bipartite_core_test)

include_directories(${HOME_DIR}/include ${HOME_DIR}/test/include)

link_directories(${HOME_DIR}/lib /usr/lib64)

link_libraries(time bipartite_core graph io logger string random pthread thread stdc++fs)

add_executable(bipartite_core_decomposition_test src/bipartite_core_decomposition_test.cpp)

add_executable(bipartite_core_insertion_test src/bipartite_core_insertion_test.cpp)

add_executable(bipartite_core_removal_test src/bipartite_core_removal_test.cpp)

add_executable(bipartite_core_insertion_removal_test src/bipartite_core_insertion_removal_test.cpp)

add_executable(bipartite_core_insertion_compare_test src/bipartite_core_insertion_compare_test.cpp)

add_executable(bipartite_core_removal_compare_test src/bipartite_core_removal_compare_test.cpp)

add_executable(bipartite_core_insertion_removal_compare_test src/bipartite_core_insertion_removal_compare_test.cpp)

add_executable(bipartite_core_insertion_size_test src/bipartite_core_insertion_size_test.cpp)

add_executable(bipartite_core_removal_size_test src/bipartite_core_removal_size_test.cpp)

add_executable(bipartite_core_insertion_removal_size_test src/bipartite_core_insertion_removal_size_test.cpp)

add_executable(bipartite_core_insertion_thread_test src/bipartite_core_insertion_thread_test.cpp)

add_executable(bipartite_core_removal_thread_test src/bipartite_core_removal_thread_test.cpp)

add_executable(bipartite_core_insertion_removal_thread_test src/bipartite_core_insertion_removal_thread_test.cpp)

add_executable(bipartite_core_shuffle_non_temporal_bipartite_edges src/bipartite_core_shuffle_non_temporal_bipartite_edges.cpp)
add_executable(bipartite_core_split_temporal_bipartite_edges src/bipartite_core_split_temporal_bipartite_edges.cpp)
